# s3peat

./: .gitignore  LICENSE  LICENSE.md  README.md  README.rst  pyproject.toml  s3peat.py  setup.py
.github/workflows/: ci.yaml  release.yaml
s3peat/: __init__.py  scripts.py
script/: docs
test/: _slow.py
tests/: conftest.py  test_s3bucket.py  test_s3queue.py  test_s3uploader.py  test_scripts.py  test_sync_to_s3.py
