[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3peat"
version = "1.0.0"
description = "Fast uploader to S3"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jacob Alheid", email = "shakefu@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
    "pytool>=4.0.0",
]

[project.urls]
Homepage = "http://github.com/shakefu/s3peat"
Repository = "http://github.com/shakefu/s3peat"
Issues = "http://github.com/shakefu/s3peat/issues"

[project.scripts]
s3peat = "s3peat.scripts:Main.console_script"

[tool.setuptools]
packages = ["s3peat"]

[tool.uv]
dev-dependencies = []

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]
